# heelixchat

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-desktop-chat-agent.yml
src/: App.tsx  Entry.tsx  callbackTemplate.ts  chat.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-10-10-232810_add_tables/: up.sql
src-tauri/migrations/2024-12-20-162928_create_projects_tables/: up.sql
src-tauri/resources/scripts/: install-macos.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bootstrap/: check_prerequisites_linux.rs  check_prerequisites_macos.rs  check_prerequisites_windows.rs  fix_path_env.rs  mod.rs  path_env_util.rs  prerequisites.rs  setup_directories.rs
src-tauri/src/configuration/: database.rs  mod.rs  settings.rs  state.rs
src-tauri/src/engine/: chat_engine.rs  chat_engine_openai.rs  clean_up_engine.rs  combined_text_engine.rs  mod.rs  monitoring_engine.rs  os_details_engine.rs  popular_websites.txt  similarity_search_engine.rs  text_recognition_engine.rs
src-tauri/src/entity/: activity_item.rs  chat_item.rs  element_details.rs  keypress_log.rs  macos_element_details.rs  mod.rs  permission.rs  project.rs  setting.rs
src-tauri/src/monitoring/: active_windows.rs  mod.rs  take_screenshot.rs
src-tauri/src/permissions/: mod.rs  permission_engine.rs  permissions_engine_linux.rs  permissions_engine_macos.rs  permissions_engine_windows.rs
src-tauri/src/repository/: activity_log_repository.rs  chat_db_repository.rs  keypress_log_repository.rs  mod.rs  permissions_repository.rs  project_repository.rs  settings_repository.rs  vector_db_repository.rs
src-tauri/src/window_details_collector/: mod.rs  window_details_collector.rs
src-tauri/src/window_details_collector/linux/: mod.rs  window_details_collector_linux.rs
src-tauri/src/window_details_collector/macos/: macos_accessibility_engine.rs  mod.rs  window_details_collector_macos.rs
src-tauri/src/window_details_collector/windows/: action_detector_engine.rs  mod.rs  window_details_collector_windows.rs  windows_accessibility_engine.rs
src-tauri/src/window_details_collector/windows/v2/: catch_event_system_alert.rs  mod.rs  screen_reader_flag.rs  uiautomation_print.rs  windows_accessibility_engine_v2.rs
src-tauri/tests/: tests-macos.rs  tests-windows.rs
src/Providers/: SettingsProvider.tsx
src/Providers/RecordingStateProvider/: RecordingStateContext.tsx  index.ts  types.ts  useRecordingState.tsx  utils.ts
src/components/: ActivitySelector.tsx  ChatHistoryList.tsx  Footer.tsx  LoadingList.tsx  Navigation.tsx  PlayStopButton.tsx  ProjectList.tsx  RecordingIndicator.tsx  SidePanel.tsx  index.ts
src/components/layout/: ScreenContainer.tsx  index.ts
src/data/: activities.ts  project.ts
src/features/: HistorySettings.tsx  ProjectBadge.tsx  SidePanel.tsx  index.ts
src/features/Projects/: ProjectModal.tsx  Projects.tsx
src/screens/: PageNotFound.tsx  index.ts
src/state/: activitiesState.ts  index.ts  projectsState.ts  settingsState.ts  userState.ts
src/widgets/: GeneralSettings.tsx  HistorySettings.tsx  PrivacySettings.tsx
(+22 files in other folders)
